fixing spacing

--- a/css/about.css
+++ b/css/about.css
@@ -31,6 +31,10 @@ body {
     margin: 0;
 }
 
+.term {
+	font-weight: bold;
+}
+
 .image {
     width: 250px;
     height: 330px;
